--- a/services/prompt-service/package.json
+++ b/services/prompt-service/package.json
@@ -19,6 +19,7 @@
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
         "morgan": "^1.10.0",
+        "pg": "^8.11.3",
         "sqlite": "^5.0.1",
         "sqlite3": "^5.1.6",
         "swagger-jsdoc": "^6.2.8",
@@ -32,6 +33,7 @@
         "@types/jest": "^29.5.8",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.8.0",
+        "@types/pg": "^8.10.9",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.7",
