--- a/services/prompt-service/package.json
+++ b/services/prompt-service/package.json
@@ -24,6 +24,7 @@
         "sqlite3": "^5.1.6",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.0",
+        "ts-node": "^10.9.2",
         "uuid": "^9.0.1",
         "winston": "^3.11.0"
     },
