feat: Enhance database connectivity and service startup process
- Added psycopg2-binary dependency for PostgreSQL database connectivity.
- Improved service startup script to configure PostgreSQL environment variables specifically for the prompt service.
- Updated error handling in service startup to provide clearer feedback on service status.
- Modified data handling in PostgresPromptDatabase to ensure proper serialization and deserialization of actual output.

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,5 +19,8 @@ huggingface_hub==0.30.0
 # Additional dependencies for enhanced BPMN AI service
 pyyaml==6.0.1
 
+# Database connectivity
+psycopg2-binary==2.9.10
+
 # Add other dependencies like pinecone-client, or faiss-cpu as needed
 flask_cors
