--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
         "dadms-ui"
     ],
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.2.0",
         "axios": "^1.10.0"
     },
     "devDependencies": {
-        "typescript": "^5.0.0",
-        "jest": "^29.0.0",
         "eslint": "^8.0.0",
-        "prettier": "^3.0.0"
+        "jest": "^29.0.0",
+        "prettier": "^3.0.0",
+        "typescript": "^5.0.0"
     }
 }
