--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -74,6 +74,22 @@ services:
       timeout: 10s
       retries: 5
 
+  # Ollama - Local LLM Server
+  ollama:
+    image: docker.io/ollama/ollama:latest
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - default
+    volumes:
+      - ollama_data:/root/.ollama
+
   # # Development Services
   # user-project-service:
   #   build: 
@@ -125,6 +141,7 @@ volumes:
   qdrant_data:
   redis_data:
   camunda_data:
+  ollama_data:
 
 
 networks:
