feat: Update package dependencies and enhance UI navigation
- Added new dependencies: `react-markdown`, `react-syntax-highlighter`, and `remark-gfm` to support enhanced markdown rendering and syntax highlighting.
- Updated `RootLayout` to include a new navigation link for the Thread Manager, improving user accessibility and navigation within the application.
- Updated `package-lock.json` to reflect the new dependencies and their versions.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.1",
         "@mui/icons-material": "^7.2.0",
-        "axios": "^1.10.0"
+        "axios": "^1.10.0",
+        "react-markdown": "^10.1.0",
+        "react-syntax-highlighter": "^15.6.1",
+        "remark-gfm": "^4.0.1"
     },
     "devDependencies": {
         "eslint": "^8.0.0",
