--- a/dadms-services/user-project/package.json
+++ b/dadms-services/user-project/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@dadms/user-project-service",
-    "version": "1.0.0",
+    "version": "2.0.0-alpha.2",
     "description": "DADMS User and Project Management Service",
     "main": "dist/index.js",
     "scripts": {
