--- a/dadms-ui/package.json
+++ b/dadms-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dadms-ui",
-  "version": "0.1.0",
+  "version": "2.0.0-alpha.2",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
