--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -96,18 +96,36 @@ services:
   #     context: ../dadms-services/user-project
   #     dockerfile: Dockerfile
   #   ports:
+  #     - "3001:3001"
+  #   environment:
+  #     - DATABASE_URL=postgresql://dadms_user:dadms_password@postgres:5432/dadms
+  #   depends_on:
+  #     - postgres
+  #   networks:
+  #     - default
+
+  # llm-playground-service:
+  #   build: 
+  #     context: ../dadms-services/llm-playground
+  #     dockerfile: Dockerfile
+  #   ports:
   #     - "3006:3006"
   #   environment:
   #     - NODE_ENV=development
-  #     - DB_HOST=postgres
-  #     - DB_PORT=5432
-  #     - DB_NAME=dadms
-  #     - DB_USER=dadms_user
-  #     - DB_PASSWORD=dadms_password
+  #     - DATABASE_URL=postgresql://dadms_user:dadms_password@postgres:5432/dadms
+  #     - REDIS_URL=redis://redis:6379
+  #     - MINIO_ENDPOINT=minio:9000
+  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #     - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+  #     - OLLAMA_ENDPOINT=http://ollama:11434
   #   depends_on:
   #     postgres:
   #       condition: service_healthy
   #     redis:
+  #       condition: service_healthy
+  #     minio:
+  #       condition: service_healthy
+  #     ollama:
   #       condition: service_healthy
   #   networks:
   #     - default
