feat: Add Context Manager Service API documentation and architecture updates
- Introduced comprehensive documentation for the new Context Manager Service API, detailing its capabilities for AI context management, including personas, teams, tools, and prompt templates.
- Updated the API overview to reflect the specification status of the Context Manager Service and its endpoints.
- Revised architecture diagrams to incorporate the Context Manager Service, clarifying its interactions with other services and data sources.
- Enhanced the README to include detailed endpoint documentation and examples for the Context Manager Service, improving overall project documentation.

--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -127,6 +127,28 @@ services:
   #       condition: service_healthy
   #     ollama:
   #       condition: service_healthy
+
+  # context-manager-service:
+  #   build: 
+  #     context: ../dadms-services/context-manager
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3020:3020"
+  #   environment:
+  #     - NODE_ENV=development
+  #     - DATABASE_URL=postgresql://dadms_user:dadms_password@postgres:5432/dadms
+  #     - REDIS_URL=redis://redis:6379
+  #     - MINIO_ENDPOINT=minio:9000
+  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #     - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+  #     - OLLAMA_ENDPOINT=http://ollama:11434
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #     minio:
+  #       condition: service_healthy
   #   networks:
   #     - default
 
