--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -149,6 +149,30 @@ services:
   #       condition: service_healthy
   #     minio:
   #       condition: service_healthy
+
+  # bpmn-workspace-service:
+  #   build: 
+  #     context: ../dadms-services/bpmn-workspace
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3021:3021"
+  #   environment:
+  #     - NODE_ENV=development
+  #     - DATABASE_URL=postgresql://dadms_user:dadms_password@postgres:5432/dadms
+  #     - REDIS_URL=redis://redis:6379
+  #     - MINIO_ENDPOINT=minio:9000
+  #     - OPENAI_API_KEY=${OPENAI_API_KEY}
+  #     - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
+  #     - AI_SUGGESTIONS_ENABLED=true
+  #     - COLLABORATION_ENABLED=true
+  #     - MAX_COLLABORATION_PARTICIPANTS=10
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #     minio:
+  #       condition: service_healthy
   #   networks:
   #     - default
 
