--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -198,6 +198,33 @@ services:
   #       condition: service_healthy
   #     camunda:
   #       condition: service_healthy
+
+  # thread-manager-service:
+  #   build: 
+  #     context: ../dadms-services/thread-manager
+  #     dockerfile: Dockerfile
+  #   ports:
+  #     - "3008:3008"
+  #   environment:
+  #     - NODE_ENV=development
+  #     - DATABASE_URL=postgresql://dadms_user:dadms_password@postgres:5432/dadms
+  #     - REDIS_URL=redis://redis:6379
+  #     - MINIO_ENDPOINT=minio:9000
+  #     - QDRANT_URL=http://qdrant:6333
+  #     - THREAD_TRACKING_ENABLED=true
+  #     - FEEDBACK_ENABLED=true
+  #     - SIMILARITY_ANALYSIS_ENABLED=true
+  #     - IMPACT_ANALYSIS_ENABLED=true
+  #     - ANALYTICS_ENABLED=true
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #     redis:
+  #       condition: service_healthy
+  #     minio:
+  #       condition: service_healthy
+  #     qdrant:
+  #       condition: service_healthy
   #   networks:
   #     - default
 
