--- a/dadms-services/aads/package.json
+++ b/dadms-services/aads/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dadms-aads",
-    "version": "1.0.0",
+    "version": "2.0.0-alpha.3",
     "description": "Agent Assistant & Documentation Service for DADMS",
     "main": "dist/index.js",
     "scripts": {
