--- a/dadms-services/ontology-workspace/package.json
+++ b/dadms-services/ontology-workspace/package.json
@@ -21,46 +21,41 @@
         "uuid": "^9.0.1",
         "joi": "^17.11.0",
         "dotenv": "^16.3.1",
-        "swagger-jsdoc": "^6.2.8",
-        "swagger-ui-express": "^5.0.0",
         "multer": "^1.4.5-lts.1",
-        "cemento": "^0.8.4",
-        "rdflib": "^2.2.34",
-        "owljs": "^1.0.0",
-        "networkx": "^0.1.0",
-        "xml2js": "^0.6.2",
-        "ws": "^8.14.2",
-        "@dadms/shared": "workspace:*"
+        "cemento": "^1.0.0",
+        "axios": "^1.6.0",
+        "swagger-ui-express": "^5.0.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
-        "@types/cors": "^2.8.16",
+        "@types/cors": "^2.8.17",
         "@types/morgan": "^1.9.9",
         "@types/pg": "^8.10.9",
         "@types/uuid": "^9.0.7",
-        "@types/jest": "^29.5.8",
-        "@types/node": "^20.9.0",
-        "@types/swagger-jsdoc": "^6.0.4",
+        "@types/multer": "^1.4.11",
         "@types/swagger-ui-express": "^4.1.6",
-        "@types/multer": "^1.4.12",
-        "@types/xml2js": "^0.4.14",
-        "@types/ws": "^8.5.9",
-        "typescript": "^5.2.2",
-        "nodemon": "^3.0.1",
-        "ts-node": "^10.9.1",
+        "@types/node": "^20.10.4",
+        "typescript": "^5.3.3",
+        "ts-node": "^10.9.2",
+        "nodemon": "^3.0.2",
         "jest": "^29.7.0",
-        "ts-jest": "^29.1.1",
-        "eslint": "^8.54.0",
-        "@typescript-eslint/eslint-plugin": "^6.12.0",
-        "@typescript-eslint/parser": "^6.12.0"
+        "@types/jest": "^29.5.8",
+        "eslint": "^8.55.0",
+        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/parser": "^6.13.1"
+    },
+    "engines": {
+        "node": ">=18.0.0"
     },
     "keywords": [
+        "dadms",
         "ontology",
         "draw.io",
         "cemento",
         "owl",
         "rdf",
-        "visual-editor",
-        "collaboration"
-    ]
+        "visualization"
+    ],
+    "author": "DADMS Team",
+    "license": "MIT"
 }
