--- a/dadms-ui/package.json
+++ b/dadms-ui/package.json
@@ -16,9 +16,11 @@
         "@mui/material": "^7.2.0",
         "@vscode/codicons": "^0.0.36",
         "monaco-editor": "^0.52.0",
+        "mxgraph": "^4.2.2",
         "next": "15.4.1",
         "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "react-dom": "19.1.0",
+        "reactflow": "^11.11.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
