--- a/dadms-ui/package.json
+++ b/dadms-ui/package.json
@@ -18,7 +18,9 @@
         "monaco-editor": "^0.52.0",
         "next": "15.4.1",
         "react": "19.1.0",
-        "react-dom": "19.1.0"
+        "react-dom": "19.1.0",
+        "reactflow": "^11.11.4",
+        "zustand": "^4.5.5"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
