--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -317,23 +317,33 @@ services:
 
   # Jupyter Lab - Interactive Development Environment
   jupyter-lab:
-    image: jupyter/minimal-notebook:latest
+    image: jupyter/scipy-notebook:latest
     container_name: jupyter-lab
     environment:
       - JUPYTER_ENABLE_LAB=yes
       - JUPYTER_TOKEN=dadms_jupyter_token
       - JUPYTER_ALLOW_REMOTE_ACCESS=yes
+      - JUPYTER_ENABLE_LAB_EXTENSION=yes
+      - PYTHONUNBUFFERED=1
+      - JUPYTER_CONFIG_DIR=/home/jovyan/.jupyter
     ports:
       - "8888:8888"
     volumes:
       - jupyter-data:/home/jovyan/work
-    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --ServerApp.token=dadms_jupyter_token --ServerApp.allow_origin='*' --ServerApp.disable_check_xsrf=True --ServerApp.trust_xheaders=True
+      - ./jupyter-config:/home/jovyan/.jupyter
+    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --ServerApp.token=dadms_jupyter_token --ServerApp.allow_origin='*' --ServerApp.disable_check_xsrf=True
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8888/"]
+      test: ["CMD", "curl", "-f", "http://localhost:8888/api/status"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 60s
+      start_period: 120s
+    deploy:
+      resources:
+        limits:
+          memory: 2G
+        reservations:
+          memory: 1G
 
   # camunda:
   #   image: camunda/camunda-bpm-platform:latest
