fix: Update Jupyter Lab Image Reference in Docker Compose
- Changed the Jupyter Lab image reference to include the Docker.io prefix for consistency and clarity.
- Ensured the Docker Compose configuration aligns with best practices for image sourcing.

--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -317,7 +317,7 @@ services:
 
   # Jupyter Lab - Interactive Development Environment
   jupyter-lab:
-    image: jupyter/scipy-notebook:latest
+    image: docker.io/jupyter/scipy-notebook:latest
     container_name: jupyter-lab
     environment:
       - JUPYTER_ENABLE_LAB=yes
