--- a/dadms-ui/package.json
+++ b/dadms-ui/package.json
@@ -19,6 +19,7 @@
         "next": "15.4.1",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "react-resizable-panels": "^3.0.3",
         "reactflow": "^11.11.4",
         "zustand": "^4.5.5"
     },
