🔒 SECURITY: Remove exposed GitHub token and add MCP config to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,12 @@ env/
 *.sublime-workspace
 *.sublime-project
 
+# MCP Configuration (contains sensitive tokens)
+.cursor/mcp.json
+.cursor/mcp.json.bak
+mcp-config.json
+mcp-config.local.json
+
 # Logs
 *.log
 *.log.*
