--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -304,16 +304,24 @@ services:
     container_name: neo4j
     environment:
       NEO4J_AUTH: neo4j/testpassword
+      NEO4J_PLUGINS: '["apoc"]'
+      NEO4J_apoc_export_file_enabled: true
+      NEO4J_apoc_import_file_enabled: true
+      NEO4J_dbms_security_procedures_unrestricted: apoc.*
+      NEO4J_dbms_memory_heap_initial_size: 512m
+      NEO4J_dbms_memory_heap_max_size: 1G
     ports:
       - "7474:7474"   # HTTP
       - "7687:7687"   # Bolt
     volumes:
       - neo4j-data:/data
     healthcheck:
-      test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "testpassword", "RETURN 1"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:7474 || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 60s
+    restart: unless-stopped
 
   # Neo4j Memory - Dedicated Graph Database for MCP AI Memory
   neo4j-memory:
@@ -324,6 +332,9 @@ services:
       NEO4J_PLUGINS: '["apoc"]'
       NEO4J_apoc_export_file_enabled: true
       NEO4J_apoc_import_file_enabled: true
+      NEO4J_dbms_security_procedures_unrestricted: apoc.*
+      NEO4J_dbms_memory_heap_initial_size: 256m
+      NEO4J_dbms_memory_heap_max_size: 512m
     ports:
       - "7475:7474"   # HTTP (different port to avoid conflict)
       - "7688:7687"   # Bolt (different port to avoid conflict)
@@ -331,10 +342,15 @@ services:
       - neo4j-memory-data:/data
       - neo4j-memory-backups:/backups
     healthcheck:
-      test: ["CMD", "cypher-shell", "-u", "neo4j", "-p", "memorypassword", "RETURN 1"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+      test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:7474 || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 90s
+    restart: unless-stopped
+    depends_on:
+      neo4j:
+        condition: service_healthy
 
   # Jupyter Lab - Interactive Development Environment
   jupyter-lab:
