--- a/dadms-infrastructure/docker-compose.yml
+++ b/dadms-infrastructure/docker-compose.yml
@@ -308,8 +308,8 @@ services:
       NEO4J_apoc_export_file_enabled: true
       NEO4J_apoc_import_file_enabled: true
       NEO4J_dbms_security_procedures_unrestricted: apoc.*
-      NEO4J_dbms_memory_heap_initial_size: 512m
-      NEO4J_dbms_memory_heap_max_size: 1G
+      #NEO4J_dbms_memory_heap_initial_size: 512m
+      #NEO4J_dbms_memory_heap_max_size: 1G
     ports:
       - "7474:7474"   # HTTP
       - "7687:7687"   # Bolt
@@ -319,8 +319,8 @@ services:
       test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:7474 || exit 1"]
       interval: 10s
       timeout: 10s
-      retries: 10
-      start_period: 60s
+      retries: 5
+      start_period: 30s
     restart: unless-stopped
 
   # Neo4j Memory - Dedicated Graph Database for MCP AI Memory
@@ -333,8 +333,8 @@ services:
       NEO4J_apoc_export_file_enabled: true
       NEO4J_apoc_import_file_enabled: true
       NEO4J_dbms_security_procedures_unrestricted: apoc.*
-      NEO4J_dbms_memory_heap_initial_size: 256m
-      NEO4J_dbms_memory_heap_max_size: 512m
+      #NEO4J_dbms_memory_heap_initial_size: 256m
+      #NEO4J_dbms_memory_heap_max_size: 512m
     ports:
       - "7475:7474"   # HTTP (different port to avoid conflict)
       - "7688:7687"   # Bolt (different port to avoid conflict)
@@ -345,12 +345,9 @@ services:
       test: ["CMD-SHELL", "wget --quiet --tries=1 --spider http://localhost:7474 || exit 1"]
       interval: 10s
       timeout: 10s
-      retries: 10
-      start_period: 90s
+      retries: 5
+      start_period: 30s
     restart: unless-stopped
-    depends_on:
-      neo4j:
-        condition: service_healthy
 
   # Jupyter Lab - Interactive Development Environment
   jupyter-lab:
